# researchandlearn-crewai

./: AI LLMs-Learning-Roadmap.md  Backend-Learning-Roadmap.md  Composio-Learning-Roadmap.md  Crawl4ai-Learning-Roadmap.md  Fast API-Learning-Roadmap.md  Fast MCPs-Learning-Roadmap.md  Frontend-Learning-Roadmap.md  GenAI-Learning-Roadmap.md  README.md  claude opus 4.5-Learning-Roadmap.md  pyproject.toml
.amazonq/rules/memory-bank/: guidelines.md  product.md  structure.md  tech.md
knowledge/: user_preference.txt
src/researchandlearn/: crew.py  main.py
src/researchandlearn/config/: agents.yaml  tasks.yaml
src/researchandlearn/tools/: composio_tools.py  mcp_tools.py
tests/: test_mcp.py
