[project]
name = "researchandlearn"
version = "0.1.0"
description = "researchandlearn using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.73.0",
    "crewai[google-genai,tools]==1.5.0",
    "litellm>=1.80.0",
    "markdown-it-py>=4.0.0",
    "mcp[cli]>=1.21.1",
]

[project.scripts]
researchandlearn = "researchandlearn.main:run"
run_crew = "researchandlearn.main:run"
train = "researchandlearn.main:train"
replay = "researchandlearn.main:replay"
test = "researchandlearn.main:test"
run_with_trigger = "researchandlearn.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
